# SimpleShell

./: .gitignore  CMakeLists.txt  readme.md
analysis_tools/: exam.py
output/: imgui.ini
packer/: pack.cpp
samples/: sample.cpp
src/gui/: imgui_gui.cpp
src/packer/: main.cpp  pack.cpp  pack.h
src/samples/: console_sample.cpp
src/stub/: x64Stub.asm
src/utils/: PEChecker.cpp  PEChecker.h
stub/: x64Stub.asm
